tests/machine/x/pascal/string_contains.error
line: 18
error: fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /tmp/TestPascalCompiler_VMValid_Goldenstring_contains4284315701/001/main.pas
main.pas(15,13) Error: Illegal qualifier
main.pas(16,13) Error: Illegal qualifier
main.pas(18) Fatal: There were 2 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode

  16:   writeln(s.contains('dog'));
  17: end.
  18: 
