tests/machine/x/pascal/string_contains.pas
// Generated by Mochi compiler v0.10.26 on 2025-07-16T15:43:33Z
program StringContains;
{$mode objfpc}
{$modeswitch nestedprocvars}
uses SysUtils, fgl, fphttpclient, Classes, Variants, fpjson, jsonparser, fpjsonrtti;

type
  generic TArray<T> = array of T;

var
  s: string;

begin
  s := 'catch';
  writeln(s.contains('cat'));
  writeln(s.contains('dog'));
end.
